redis/5.5/modules/ROOT/pages/index.adoc
= Redis Connector 5.5 
:page-aliases: connectors::redis/redis-connector.adoc



Anypoint Connector for Remote Dictionary Server (Redis Connector) is an open source, in-memory data structure store used to cache user profiles, create leader boards, track real-time activities on a website, and filter spam. You can use Redis Connector as a message queue, custom object store, and more.


== Before You Begin

To use this connector, you must be familiar with:

* The Redis API
* Anypoint Connectors
* Mule runtime engine (Mule)
* Elements in a Mule flow
* Global elements
* How to create a Mule app using Anypoint Studio

Before creating an app, you must have access to the Redis target resource.

== Audience

* New users, read:

** xref:redis-connector-studio.adoc[Using Anypoint Studio to Configure Redis Connector]
** xref:redis-connector-examples.adoc[Examples], which provides use cases for the connector
+
* Advanced users, read:
** xref:redis-connector-xml-maven.adoc[XML and Maven Support]
** xref:redis-connector-examples.adoc[Examples] topics

== Connection Types

[NOTE]
Redis Connector supports only password-based authentication. Redis Connector does not currently support Role-Based Access Control (RBAC).

Redis Connector uses the following connection types:

* Clustered

* NonClustered

* Sentinel


== Next Step

After you complete the prerequisites and experiment with examples, you are ready to create an app and configure the connector using xref:redis-connector-studio.adoc[Anypoint Studio].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-use-exchange.adoc[Use Exchange to Discover Connectors, Templates, and Examples]
* https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-redis-connector/[Redis in Anypoint Exchange]
* https://eu1.anypoint.mulesoft.com/exchange/com.mulesoft.connectors/mule-redis-connector/[Redis in EU Anypoint Exchange]
* https://help.mulesoft.com[MuleSoft Help Center]
